@@ -1,0 +1,41 @@
+Cloudtrail
+==========
+
+.. module:: touchdown.aws.cloudtrail
+   :synopsis: Cloudtrail resources.
+
+
+Cloudtrail is the AWS audit log. It allows you to see what API calls a user has
+made (including the API calls generated by the AWS console).
+
+
+Trail
+-----
+
+.. class:: Trail
+
+    .. attribute:: name
+
+        The name of the trail.
+
+    .. attribute:: bucket
+
+        An S3 bucket used to store cloudtrail logs.
+
+    .. attribute:: bucket_prefix
+
+    .. attribute:: topic
+
+        Specifies a :class:`~touchdown.aws.sns.Topic` defined for notification of log file delivery.
+
+    .. attribute:: include_global
+
+        Specifies whether the trail is publishing events from global services such as IAM to the log files.
+
+    .. attribute:: cwlogs_group
+
+        Specifies a CloudWatch logs group to deliver CloudTrail logs to.
+
+    .. attribute:: cwlogs_role
+
+        Specifies a Role for the CloudWatch Logs endpoint to assume when writing to a LogGroup.
