@@ -18,6 +18,7 @@ from . import (
     ec2,
     cloudfront,
     cloudwatch,
+    cloudtrail,
     cost,
     elasticache,
     elastictranscoder,
@@ -40,6 +41,7 @@ __all__ = [
     'ec2',
     'cloudfront',
     'cloudwatch',
+    'cloudtrail',
     'cost',
     'elasticache',
     'elastictranscoder',
